--- a/examples/index.html
+++ b/examples/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, height=device-height, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="/mobileditor.cobble.css">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="mobileditor.cobble.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="editor-container">
@@ -13,7 +13,7 @@
         <button class="ql-image"></button>
     </div>
 
-    <script type="text/javascript" src="/mobileditor.js"></script>
+    <script type="text/javascript" src="mobileditor.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
